--- a/app/views/layouts/nyu/search.html.erb
+++ b/app/views/layouts/nyu/search.html.erb
@@ -5,6 +5,7 @@
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
 		<link href="https://library.nyu.edu/css/common/bobcat.css" media="screen" rel="stylesheet" type="text/css" />
+    <!-- <link href="http://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css" /> -->
 		<script src="https://library.nyu.edu/scripts/jquery/plugins/jquery.nyulibrary.feedback.js" type="text/javascript"></script>
 		<script src="https://library.nyu.edu/scripts/jquery/plugins/jquery.nyulibrary.libraryhelp.js" type="text/javascript"></script>
 		<script src="https://library.nyu.edu/scripts/jquery/plugins/jquery.poshytip.min.js" type="text/javascript"></script>
