--- a/app/assets/stylesheets/search/_variables.css.scss
+++ b/app/assets/stylesheets/search/_variables.css.scss
@@ -10,7 +10,7 @@ $nyuLibrariesBorderColor:                   #653d24 !default;
 $nyuLibrariesBackgroundColor:               #000000 !default;
 $maxSearchLabelWidth:                       80px !default;
 $searchBackgroundColor:                     darken(whiteSmoke, 5%) !default;
-$resultsBackgroundColor:                    $searchBackgroundColor !default;
+$resultsBackgroundColor:                    white !default;
 $breadcrumbsBackgroundColor:                $searchBackgroundColor;
 $searchBorderColor:                         darken($searchBackgroundColor, 10%) !default;
 $tabBackgroundColor:                        lighten($searchBackgroundColor, 5%) !default;
@@ -20,3 +20,6 @@ $azLinkColor:                               $nyuLibrariesAzBlue;
 $azBorderColor:                             #BBBBBB;
 $azBackgroundColor:                         white;
 $azHoverBackgroundColor:                    #EEEEEE;
+$padding_standard: 1.5em;
+$padding_small: $padding_standard * .6666;
+$padding_tiny: $padding_standard * .3333;
