--- a/app/views/search/journals.html.erb
+++ b/app/views/search/journals.html.erb
@@ -103,8 +103,5 @@
       </fieldset>
     </div>
   </form>
-  <div id="browse" class="search-section">
-    <h2>Browse E-Journal Titles</h2>
-    <%= render :partial=>"a_to_z" %>
-  </div>
+  <%= render :partial=>"browse" %>
 </div>
