Update to import jquery ui css.

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -18,7 +18,7 @@
 @import "search/form";
 @import "search/az";
 
-@import "http://library.nyu.edu/scripts/jquery/css/nyulibraries_gray/jquery-ui.css";
+@import url("http://library.nyu.edu/scripts/jquery/css/nyulibraries_gray/jquery-ui.css");
 
 div.rfr_id {
   margin: {
