--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="EN">
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<title>GetIt | <%= @page_title %></title>
 	  <%= csrf_meta_tags %>
