--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>GetIt | <%= @page_title %></title>
-	  <%= csrf_meta_tags %>
-    <%= resolve_stylesheets %> 
-	  <%= resolve_javascripts %>
-	</head>
-	<body>
-		<div class="umlaut-container">
-			<header class="header">
-				<a href="http://library.nyu.edu/" id="hd_link_to_home"></a>
-				<h1><%= umlaut_config.app_name %></h1>
-			</header>
-    	<nav class="umlaut-resolve-nav">
-    	  <div id="permalink">
-          <ul class="pull-left unstyled">
-  					<li>URL: <%= link_to current_permalink_url, current_permalink_url %></li>
-  				</ul>
-    		</div>
-    	  <div id="login">
-    		  <%= login.html_safe %>
-    	  </div>
-    	</nav>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GetIt | <%= @page_title %></title>
+    <%= csrf_meta_tags %>
+    <%= resolve_stylesheets %>
+    <%= resolve_javascripts %>
+    <%= render_umlaut_head_content %>
+  </head>
+  <body>
+    <div class="umlaut-container">
+      <header id="header" class="header">
+        <div><a href="http://library.nyu.edu/"><span>NYU Libraries</span></a></div>
+        <h1><%= umlaut_config.app_name %></h1>
+      </header>
+      <% if permalink = current_permalink_url() %>
+        <nav class="umlaut-resolve-nav">
+          <%= permalink_nav %>
+          <%= login %>
+        </nav>
+      <% end %>
       <div class="container-fluid <%= "umlaut-#{params[:controller]}-container" %>">
         <%= yield %>
       </div>
-			<!-- even with nothing in it, footer neccesary for CSS clear=both -->
-			<div id="footer" class="footer"> 
-				Powered by <a href="http://umlaut.rubyforge.org/">Umlaut</a>, using services from <a href="http://www.exlibrisgroup.com/sfx.htm">SFX</a>, <a href="http://www.crossref.org">CrossRef</a>, <a href="http://www.amazon.com">Amazon</a>, <a href="http://www.worldcat.org">OCLC Worldcat</a>, <a href="http://isbndb.com">ISBNdb</a>, <a href="http://www.librarything.com">LibraryThing</a>, <a href="http://books.google.com">Google Books</a>, <a href="http://www.lib.umich.edu/mdp/">HathiTrust</a>, <a href="http://openlibrary.org/">OpenLibrary</a>, <a href="http://archive.org">the Internet Archive</a>, <a href="http://orlabs.oclc.org/Identities/">Worldcat Identities</a> and others.  
-				<%= link_to_toggle_debug_info %> 
-				<% 
-				sfx_base_url = (current_primary_institution.views["sfx_base_url"] || umlaut_config.lookup!("sfx.sfx_base_url"))
-				# sfx_base_url = umlaut_config.lookup!("sfx.sfx_base_url")
-				if sfx_base_url && @user_request 
-					url = sfx_base_url;
-					url += @user_request.to_context_object.kev
-					url += "&sfx.ignore_date_threshold=1" if title_level_request? %> 
-					<%= link_to '[S]', url, :target=>'_blank' %> 
-				<% end %>
-			</div>
-		</div>
-	</body>
+      <footer id="footer" class="footer">
+        <%= render_service_credits %>
+        <%-
+          #links to aid in debugging openurls gone wrong when in production 
+        -%>
+        <%= link_to_test_resolve %>
+        <%= link_to_direct_sfx %>
+        <%= link_to_toggle_debug_info %>
+      </footer>
+    </div>
+  </body>
 </html>
