--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -1,2 +1,8 @@
 @import "resolve/variables";
 @import "umlaut";
+@import "common/header";
+@import "common/login";
+
+#permalink {
+  @extend .pull-left;
+}
