--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -4,19 +4,20 @@
 @import "search/variables";
 @import "bootstrap";
 @import "bootstrap-responsive";
-@import "search/mixins";
-@import "search/reset";
-@import "search/base";
-@import "search/misc";
-@import "search/content_types";
-@import "search/header";
-@import "search/breadcrumbs";
-@import "search/sidebar";
-@import "search/tabs";
-@import "search/search";
-@import "search/results";
-@import "search/form";
-@import "search/az";
+@import "common/mixins";
+@import "common/reset";
+@import "common/base";
+@import "common/misc";
+@import "common/content_types";
+@import "common/header";
+@import "common/breadcrumbs";
+@import "common/login";
+@import "common/sidebar";
+@import "common/tabs";
+@import "common/search";
+@import "common/results";
+@import "common/form";
+@import "common/az";
 
 div.rfr_id {
   margin: {
