--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -2,6 +2,7 @@
 @import "umlaut";
 @import "common/header";
 @import "common/login";
+@import "common/responsive";
 
 #permalink {
   @extend .pull-left;
