--- a/app/assets/stylesheets/common/_reset.css.scss
+++ b/app/assets/stylesheets/common/_reset.css.scss
@@ -1,5 +1,6 @@
 body {
   padding-left: 0px; 
+  padding-right: 0px; 
 }
 
 header {
@@ -64,12 +65,4 @@ select {
   height: auto; /* In IE7, the height of the select element cannot be changed by height, only font-size */
   *margin-top: 4px; /* For IE7, add top margin to align select with labels */
   line-height: auto;
-}
-
-@media (max-width: 480px) {
-  label {
-    margin: {
-      left: 0px;
-    }
-  }
 }
