--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -6,7 +6,6 @@
 @import "bootstrap-responsive";
 @import "common/mixins";
 @import "common/reset";
-@import "common/base";
 @import "common/misc";
 @import "common/content_types";
 @import "common/header";
@@ -18,6 +17,7 @@
 @import "common/results";
 @import "common/form";
 @import "common/az";
+@import "common/responsive";
 
 div.rfr_id {
   margin: {
