Update javascripts for bootstrap

--- a/app/assets/stylesheets/search/_variables.css.scss
+++ b/app/assets/stylesheets/search/_variables.css.scss
@@ -1,8 +1,8 @@
-$baseFontSize:                              13px;
-$baseFontFamily:                            'Muli';
+$baseFontSize:                              12px;
+// $baseFontFamily:                            'Muli';
 $smallFontSize:                             $baseFontSize - 1;
 $largeFontSize:                             $baseFontSize + 2;
-$baseLineHeight:                            13px;
+$baseLineHeight:                            12px;
 $linkColor:                                 blue;
 $nyuLibrariesDarkBrown:                     #653d24 !default;
 $nyuLibrariesLightBrown:                    #E0D8C9 !default;
