--- a/app/views/nyu/_tip1.html.erb
+++ b/app/views/nyu/_tip1.html.erb
@@ -1,4 +1,4 @@
-<div class="tip">
+<div class="nyu-tip">
   To search for articles on a topic, use the
   <a href="http://webdev1.library.nyu.edu/arch">Articles &amp; Databases</a> tab.
 </div>
