--- a/app/views/nyu/_tip2.html.erb
+++ b/app/views/nyu/_tip2.html.erb
@@ -1,1 +1,6 @@
-<div style="margin-top: 10px;" class="tip"><a href="http://library.nyu.edu/info/umlaut/article_finding_tips.html" class="tip-link tip-link-full" target="_blank">Having trouble finding your article?</a></div>
+<%=
+ content_tag(:div, :class => "nyu-tip") {
+   link_to_remote_popover "Having trouble finding your article?", 
+    "http://library.nyu.edu/info/umlaut/article_finding_tips.html", 
+      "article-finding-popover", "data-class"=>"article-finding"
+ }%>
