--- a/app/views/nyuad/_tip1.html.erb
+++ b/app/views/nyuad/_tip1.html.erb
@@ -1,4 +1,4 @@
-<div class="tip">
-	To search for articles on a topic, use the
-	<a href="http://webdev1.library.nyu.edu/arch/nyuad">Articles &amp; Databases</a> tab.
+<div class="nyu-tip">
+  To search for articles on a topic, use the
+  <a href="http://webdev1.library.nyu.edu/arch/nyuad">Articles &amp; Databases</a> tab.
 </div>
