--- a/app/views/cu/_sidebar.html.erb
+++ b/app/views/cu/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div id="account" class="sidebar-section">
-  <h2><a href="http://library.nyu.edu/info/myworkspace.html" class="nyulibrary_icons_help nyulibrary_help"><i class="icons-famfamfam-help"></i></a> My Workspace</h2>
+  <h2><a href="http://library.nyu.edu/info/myworkspace.html" title="What is My Workspace?" data-placement="left"><i class="icons-famfamfam-help"></i></a> My Workspace</h2>
   <ul>
     <% if current_user %>
       <li><a href="https://webdev1.library.nyu.edu/eshelf?institution=CU">My e-shelf</a></li>
