--- a/app/assets/stylesheets/common/_misc.css.scss
+++ b/app/assets/stylesheets/common/_misc.css.scss
@@ -21,7 +21,12 @@
     @extend .btn;
     float: left;
     margin-right: 5px;
-    padding: 5px;
+    padding: {
+      top: 3px;
+      bottom: 3px;
+      left: 5px;
+      right: 5px;
+    }
     content: "Tip";
     @include background-image(linear-gradient(color-stops(#886EAE, lighten(#886EAE, 5%))));
     background-color: #886EAE;
