Update for shared assets.

--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -1,4 +1,4 @@
-@import "resolve/variables";
+// @import "resolve/variables";
 // @import "nyulibraries/header";
 // @import "nyulibraries/login";
 // @import "nyulibraries/responsive";
