--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -1,9 +1,9 @@
-// @import "resolve/variables";
-// @import "nyulibraries/header";
-// @import "nyulibraries/login";
-// @import "nyulibraries/responsive";
+@import "resolve/variables";
+@import "nyulibraries/header";
+@import "nyulibraries/login";
+@import "nyulibraries/responsive";
 @import "umlaut";
 
 #permalink {
-  // @extend .pull-left;
+  @extend .pull-left;
 }
