Updated stylesheet includes to include mixins from nyuassets gem

--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -1,6 +1,8 @@
 @import "resolve/variables";
 @import "nyulibraries/header";
 @import "nyulibraries/login";
+@import "nyulibraries/mixins";
+@import "nyulibraries/tabs";
 @import "nyulibraries/responsive";
 @import "umlaut";
 
