--- a/app/assets/stylesheets/search/_variables.scss
+++ b/app/assets/stylesheets/search/_variables.scss
@@ -2,8 +2,8 @@ $baseFontSize:                              12px;
 // $baseFontFamily:                            'Muli';
 $smallFontSize:                             $baseFontSize - 1;
 $largeFontSize:                             $baseFontSize + 2;
-$baseLineHeight:                            12px;
-$linkColor:                                 blue;
+$baseLineHeight:                            12px !default;
+$linkColor:                                 blue !default;
 $nyuLibrariesDarkBrown:                     #653d24 !default;
 $nyuLibrariesLightBrown:                    #E0D8C9 !default;
 $nyuLibrariesAzBlue:                        #0000ee !default;
