Added whole bobcat suite to stylesshets

--- a/app/assets/stylesheets/resolve.css.scss
+++ b/app/assets/stylesheets/resolve.css.scss
@@ -1,9 +1,5 @@
+@import "bobcat";
 @import "resolve/variables";
-@import "nyulibraries/header";
-@import "nyulibraries/login";
-@import "nyulibraries/mixins";
-@import "nyulibraries/tabs";
-@import "nyulibraries/responsive";
 @import "umlaut";
 
 #permalink {
