--- a/app/assets/stylesheets/resolve/_variables.scss
+++ b/app/assets/stylesheets/resolve/_variables.scss
@@ -4,8 +4,8 @@ $smallFontSize:                             $baseFontSize - 1;
 $largeFontSize:                             $baseFontSize + 2;
 $baseLineHeight:                            12px !default;
 $linkColor:                                 #0066CC !default;
-$nyuLibrariesDarkGrey:                      #cfcfcf;
-$nyuLibrariesLightGrey:                     #e8e8e8;
+$nyuLibrariesDarkGrey:                      lighten(#cfcfcf, 7%);
+$nyuLibrariesLightGrey:                     lighten(#e8e8e8, 5%);
 $nyuLibrariesAzBlue:                        #0000ee;
 $nyuLibrariesBorderColor:                   darken($nyuLibrariesDarkGrey, 10%);
 $nyuLibrariesBackgroundColor:               #000000;
