--- a/app/views/resolve/_holding.html.erb
+++ b/app/views/resolve/_holding.html.erb
@@ -10,9 +10,9 @@ holdings = get_service_type('holding')
 unless holdings.empty? %>  
   <div class="container-fluid umlaut-holdings">
     <p style="margin-bottom: 1em;"><%=
-		  link_to("View Maps and Call Number Locations",
-			  "http://library.nyu.edu/bobcat/callno/", 
-			    :target=>"_blank") %></p><%
+      link_to("View Maps and Call Number Locations",
+        "http://library.nyu.edu/bobcat/callno/", 
+          :target=>"_blank") %></p><%
     # Process each holding.
     holdings.each do |p|
       target = p.view_data %>
@@ -24,28 +24,26 @@ unless holdings.empty? %>
         <div class="span3 <%= status_class %>"><%= target[:status] %></div>
         <div class="span2">
           <%= link_to("More Info", {:controller=>"link_router", :id=>p.id}, :target => "_blank", :class=>"btn btn-success") %><%
-					# Request link
-					if RequestsHelper.link_to_request?(target, current_user_session)
-						link_to_request = ""
-			  			# Generate a hyperlink for standard service action with 
-			  			# class "ajax_window" for unobtrusive JS.
-						if current_user and target[:request_link_supports_ajax_call]
-			  				link_to_request << link_to("Request", 
-			  				  requests_url(p.id), 
-			  				    {:id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary ajax_window"})
-						elsif current_user # Ordinary href link to request_url (without ajax_window class).
-		  				link_to_request << link_to("Request", 
-		  				  requests_url(p.id), 
-		  				    {:id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary"})
-						else #Send to login screen.
-		  				link_to_request << link_to("Request",
-		  				  login_url({ :return_url=>current_permalink_url, :request_id=>target[:source_data][:aleph_item_id]}), 
-		  				    {:id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary"})
-						# End request link generation
-						end %><%=
-						link_to_request.html_safe %><%
-					# End request link decision
-					end %>          
+          # Request link
+          if RequestsHelper.link_to_request?(target, current_user_session)
+            link_to_request = ""
+            # Generate a hyperlink for standard service action with 
+            # class "ajax_window" for unobtrusive JS.
+            if current_user and target[:request_link_supports_ajax_call]
+              link_to_request << link_to("Request", requests_url(p.id), 
+                :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary ajax_window")
+            elsif current_user # Ordinary href link to request_url (without ajax_window class).
+              link_to_request << link_to("Request", requests_url(p.id), 
+                :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary")
+            else #Send to login screen.
+              link_to_request << link_to("Request", 
+                login_url({:return_url=>current_permalink_url, :request_id=>target[:source_data][:aleph_item_id]}), 
+                  :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary")
+            # End request link generation
+            end %><%=
+            link_to_request.html_safe %><%
+            # End request link decision
+          end %>          
         </div>
       </div><% 
       # Display edition info
@@ -80,10 +78,10 @@ unless holdings.empty? %>
       end
     end %>
   </div><%
-	# In order to make sure we always get the freshest
-	# holdings data we expire old holdings.
-	# Similar to RTA in Primo.
-	expire_old_holdings(@user_request, holdings)
+  # In order to make sure we always get the freshest
+  # holdings data we expire old holdings.
+  # Similar to RTA in Primo.
+  expire_old_holdings(@user_request, holdings)
 end
 # Process the case where holdings are empty
 if holdings.empty? %>
