--- a/app/views/resolve/_holding.html.erb
+++ b/app/views/resolve/_holding.html.erb
@@ -15,66 +15,69 @@ unless holdings.empty? %>
           :target=>"_blank") %></p><%
     # Process each holding.
     holdings.each do |p|
-      target = p.view_data %>
-      <div class="row-fluid umlaut-holding">
-        <div class="span3"><%= target[:collection_str] %></div>
-        <div class="span4"><%= target[:call_number]%></div><%
-        # Set status class based on configured available statuses
-        status_class = umlaut_config.holdings.available_statuses.include?(target[:status]) ? 'available' : '' %> 
-        <div class="span3 <%= status_class %>"><%= target[:status] %></div>
-        <div class="span2">
-          <%= link_to("More Info", {:controller=>"link_router", :id=>p.id}, :target => "_blank", :class=>"btn btn-success") %><%
-          # Request link
-          if RequestsHelper.link_to_request?(target, current_user_session)
-            link_to_request = ""
-            # Generate a hyperlink for standard service action with 
-            # class "ajax_window" for unobtrusive JS.
-            if current_user and target[:request_link_supports_ajax_call]
-              link_to_request << link_to("Request", requests_url(p.id), 
-                :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary ajax_window")
-            elsif current_user # Ordinary href link to request_url (without ajax_window class).
-              link_to_request << link_to("Request", requests_url(p.id), 
-                :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary")
-            else #Send to login screen.
-              link_to_request << link_to("Request", 
-                login_url({:return_url=>current_permalink_url, :request_id=>target[:source_data][:aleph_item_id]}), 
+      target = p.view_data 
+      # Only display holdings that aren't expired. 
+      unless target[:expired] == true %>
+        <div class="row-fluid umlaut-holding">
+          <div class="span3"><%= target[:collection_str] %></div>
+          <div class="span4"><%= target[:call_number]%></div><%
+          # Set status class based on configured available statuses
+          status_class = umlaut_config.holdings.available_statuses.include?(target[:status]) ? 'available' : '' %> 
+          <div class="span3 <%= status_class %>"><%= target[:status] %></div>
+          <div class="span2">
+            <%= link_to("More Info", {:controller=>"link_router", :id=>p.id}, :target => "_blank", :class=>"btn btn-success") %><%
+            # Request link
+            if RequestsHelper.link_to_request?(target, current_user_session)
+              link_to_request = ""
+              # Generate a hyperlink for standard service action with 
+              # class "ajax_window" for unobtrusive JS.
+              if current_user and target[:request_link_supports_ajax_call]
+                link_to_request << link_to("Request", requests_url(p.id), 
+                  :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary ajax_window")
+              elsif current_user # Ordinary href link to request_url (without ajax_window class).
+                link_to_request << link_to("Request", requests_url(p.id), 
                   :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary")
-            # End request link generation
-            end %><%=
-            link_to_request.html_safe %><%
-            # End request link decision
-          end %>          
-        </div>
-      </div><% 
-      # Display edition info
-      if (!target[:match_reliability].blank?) && target[:match_reliability] != ServiceResponse::MatchExact %>
-        <div class="row-fluid">
-          <div class="span12">
-            <div class="umlaut-content-indent edition_warning">
-              <% unless target[:edition_str].blank? %>
-                <em class="note">Edition information</em> <%= target[:edition_str] %>
-              <% else %>
-                <em class="note">May be alternate edition.</em>
-              <% end %>
-            <div>
+              else #Send to login screen.
+                link_to_request << link_to("Request", 
+                  login_url({:return_url=>current_permalink_url, :request_id=>target[:source_data][:aleph_item_id]}), 
+                    :id=>"#{target[:source_data][:aleph_item_id]}", :target=>"_blank", :class=>"btn btn-primary")
+              # End request link generation
+              end %><%=
+              link_to_request.html_safe %><%
+              # End request link decision
+            end %>          
           </div>
-        </div><%
-      end 
-      # Display notes
-      unless target[:notes].blank? %>
-        <div class="row-fluid">
-          <div class="span12 umlaut-content-indent"><%= target[:notes] %></div>
-        </div><%
-      end
-      # Display coverage
-      unless target[:coverage].blank? %>
-        <div class="row-fluid">
-          <div class="span12"><%=              
-            list_with_limit("copies_#{p.id}", target[:coverage_str_array]) do |item, index| %>
-              <li><%= item %></li><% 
-            end %>
-          </div>
-        </div><%
+        </div><% 
+        # Display edition info
+        if (!target[:match_reliability].blank?) && target[:match_reliability] != ServiceResponse::MatchExact %>
+          <div class="row-fluid">
+            <div class="span12">
+              <div class="umlaut-content-indent edition_warning">
+                <% unless target[:edition_str].blank? %>
+                  <em class="note">Edition information</em> <%= target[:edition_str] %>
+                <% else %>
+                  <em class="note">May be alternate edition.</em>
+                <% end %>
+              <div>
+            </div>
+          </div><%
+        end 
+        # Display notes
+        unless target[:notes].blank? %>
+          <div class="row-fluid">
+            <div class="span12 umlaut-content-indent"><%= target[:notes] %></div>
+          </div><%
+        end
+        # Display coverage
+        unless target[:coverage].blank? %>
+          <div class="row-fluid">
+            <div class="span12"><%=              
+              list_with_limit("copies_#{p.id}", target[:coverage_str_array]) do |item, index| %>
+                <li><%= item %></li><% 
+              end %>
+            </div>
+          </div><%
+        end
       end
     end %>
   </div><%
