Add search type class to select to leverage Umlaut typeahead.

--- a/app/views/search/journals.html.erb
+++ b/app/views/search/journals.html.erb
@@ -15,7 +15,7 @@
         <div class="control-group">
           <%= label :journal, :title, "Journal Title:", :class => "control-label" %>
           <div class="controls">
-            <select name="umlaut.title_search_type" class="sfx_title_search input-medium">
+            <select name="umlaut.title_search_type" class="title_search_type input-medium">
               <%= options_for_select({"contains" => "contains", "begins with" => "begins", "exact match" => "exact"}, params["umlaut.title_search_type"])  %>
             </select>
             <%= text_field :journal, :title, {:name=>'rft.jtitle', :class=>"title_search input-xlarge"} %>
