--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -1,73 +1,3 @@
 @import "bobcat";
 @import "search/az";
-
-div.rfr_id {
-  margin: {
-    top: 5px;
-  }
-  select {
-    margin: {
-      right: -10px;
-    }
-  }
-}
-
-.umlaut-citation-link {
-  text-align: right;
-  padding: {
-    top: $baseLineHeight;
-  }
-}
-
-.popover {
-  .article-finding {
-    width: 300px;
-  }
-  .issn {
-    width: 400px;
-    p {
-      margin-bottom: $baseLineHeight/2;
-    }
-  }
-  .doi {
-    width: 500px;
-  }
-}
-
-@media (max-width: 767px) {
-  .umlaut-citation {
-    font: {
-      size: $baseFontSize*1.25
-    }
-    line-height: $baseLineHeight*2;
-    dl {
-      dt, dd {
-        padding: {
-          top: $baseLineHeight;
-        }
-      }
-    }
-  }
-
-  .umlaut-citation-link {
-    text-align: left;
-    font: {
-      size: $baseFontSize*1.25
-    }
-    line-height: $baseLineHeight*2;
-    padding: {
-      top: $baseLineHeight*2;
-    }
-  }
-}
-
-@media (max-width: 480px) {
-  div.rfr_id {
-    select {
-      width: auto;
-      margin: {
-        right: 0px;
-      }
-    }
-  }
-}
+@import "search/common";
